--- a/part1/mycat.html
+++ b/part1/mycat.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pochi the Cat</h1>
-    <img src="รูปภาพ/9e4ab180-fd11-11ed-b2aa-9935735a579c.png" alt="แมว" width="350px" height="350px" style="float: right;">
+    <img src="รูปภาพ/9e4ab180-fd11-11ed-b2aa-9935735a579c.png" alt="แมว" width="350px" height="300px" style="float: right;">
     <h2>Introduciton</h2>    
     <p>Pochi was adopted from an animal shelter and now reides in Seattle, WA, where she runs a small but successful wed page business exclusively for clients.</p>
     <h2>Profile</h2>
@@ -18,8 +18,8 @@
     </ol>
     <h2>Links</h2>
     <ul>
-        <li><span style="color: blue;"><u>Seattle Animal Contro; Shelter</u></span></li>
-        <li><span style="color: blue;"><u>Humane Soceity of the United States</u></span></li>
+        <li><a href="http://www.seattle.gov/animalshelter" target="_blank" rel="noopener noreferrer">Seattle Animal Control Shelter</a></li>
+        <li><a href="http://www.humanesociety.org" target="_blank" rel="noopener noreferrer">Humane Soceity of the United States</a></li>
     </ul>
     <h2>Vital Statistics</h2>
     <table border="1">
