--- a/part1/mycat.html
+++ b/part1/mycat.html
@@ -48,5 +48,6 @@
     </table>
     <hr>
     <p>Last uptdated om=n 24 June 2013 by Pochi thw Cat</p>
+    <a href="../part2/index.html">Back to Home</a>
 </body>
 </html>
