--- a/part2/about.html
+++ b/part2/about.html
@@ -8,6 +8,8 @@
 <body>
     <h1>About Me</h1>
     <p>This is About Me oage, Here, can add your perspnal infomation, background, and interests.</p>
-    <a href="../part1/mycat.html">Back to Home</a>
+    <a href="../part2/index.html">Back to Home</a>
+    
+
 </body>
 </html>
