--- a/part2/mycat.html
+++ b/part2/mycat.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pochi the Cat</h1>
-    <img src="รูปภาพ/9e4ab180-fd11-11ed-b2aa-9935735a579c.png" alt="แมว" width="350px" height="300px" style="float: right;">
+    <img src="../part1/รูปภาพ/9e4ab180-fd11-11ed-b2aa-9935735a579c.png" alt="แมว" width="600px" height="450px" style="float: right;">
     <h2>Introduciton</h2>    
     <p>Pochi was adopted from an animal shelter and now reides in Seattle, WA, where she runs a small but successful wed page business exclusively for clients.</p>
     <h2>Profile</h2>
@@ -48,5 +48,6 @@
     </table>
     <hr>
     <p>Last uptdated om=n 24 June 2013 by Pochi thw Cat</p>
+    <a href="../part2/index.html">Back to Home</a>
 </body>
 </html>
