--- a/part2/hobby.html
+++ b/part2/hobby.html
@@ -8,6 +8,6 @@
 <body>
     <h1>My Hobby</h1>
     <p>This is the My Hoddy page. Discuss your hoddies, pastimes, and interests.</p>
-    <a href="../part1/mycat.html">Back to Home</a>
+    <a href="../part2/index.html">Back to Home</a>
 </body>
 </html>
