--- a/part3/about3.html
+++ b/part3/about3.html
@@ -3,19 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Page 3</title>
+    <title>About Me - Part 3</title>
 </head>
 <body>
-    <header>
-        <h1>About Me - Page 3</h1>
-    </header>
-    <main>
-        <p>Thank you for visiting my "About Me" section! I hope you learned more about me through these pages.</p>
-        <a href="about2.html">Previous Page</a>
-        <a href="index.html">Back to Home</a>
-    </main>
-    <footer>
-        <a href="index.html">Back to Home</a>
-    </footer>
+    <h1>About Me - Part 3</h1>
+    <p>นี่คือลำดับที่ 3 ของการแนะนำตัวฉัน</p>
+    
+    <!-- ลิงก์กลับไปที่หน้าหลัก -->
+    <a href="../part2/index.html">กลับสู่หน้าหลัก</a>
 </body>
 </html>
