--- a/part3/about1.html
+++ b/part3/about1.html
@@ -3,18 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Page 1</title>
+    <title>About Me - Part 1</title>
 </head>
-<body>
-    <header>
-        <h1>About Me - Page 1</h1>
-    </header>
-    <main>
-        <p>Hello! My name is [Your Name]. This is the first page of the "About Me" section. Here, I'll share a bit about my journey.</p>
-        <a href="about2.html">Next Page</a>
-    </main>
-    <footer>
-        <a href="index.html">Back to Home</a>
-    </footer>
+<body style="background-color:burlywood;">
+    <table style="background-color: blanchedalmond;">
+        <th><h1>About Me - Part 1</h1></th>
+    </table>
+    <p>นี่คือลำดับที่ 2 ของการแนะนำตัวฉัน</p>
+    
+    <p>ยินดีต้อนรับสู่หน้าที่ 1 ของการแนะนำตัวฉัน!</p>
+    <table style="background-color: blanchedalmond;">
+        <head>
+        </head>
+        <tbody>
+            <tr>
+                <td>ผมมีชื่อเล่นว่า ทีม</td>
+            </tr>
+<tr><td>ไม่มีอะไรจะเล่า</td></tr>
+        </tbody>
+    </table>
+    <!-- ลิงก์ไปยังหน้าถัดไปและหน้าหลัก -->
+    <a href="../part2/index.html"><span style="background-color:antiquewhite;">กลับสู่หน้าหลัก</span></a> | <a href="about2.html"><span style="background-color: aqua;">ถัดไป</span></a>
 </body>
 </html>
