--- a/part3/about2.html
+++ b/part3/about2.html
@@ -3,19 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Page 2</title>
+    <title>About Me - Part 2</title>
 </head>
-<body>
-    <header>
-        <h1>About Me - Page 2</h1>
-    </header>
-    <main>
-        <p>This page focuses on my hobbies and interests. I enjoy coding, exploring new technologies, and learning continuously!</p>
-        <a href="about1.html">Previous Page</a>
-        <a href="about3.html">Next Page</a>
-    </main>
-    <footer>
-        <a href="index.html">Back to Home</a>
-    </footer>
+<body style="background-color: burlywood;">
+    <table style="background-color: blanchedalmond;">
+        <th><h1>bout Me - Part 2</h1></th>
+    </table>
+    <p>นี่คือลำดับที่ 2 ของการแนะนำตัวฉัน</p>
+    
+    <!-- ลิงก์ไปยังหน้าก่อนหน้าและหน้าถัดไป -->
+    <a href="about1.html">กลับไปก่อนหน้า</a> | <a href="about3.html">ถัดไป</a>
 </body>
 </html>
