--- a/part3/about1.html
+++ b/part3/about1.html
@@ -5,24 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Part 1</title>
 </head>
-<body style="background-color:burlywood;">
-    <table style="background-color: blanchedalmond;">
+<body style="background-color:blanchedalmond;">
+    <table style="background-color:rosybrown;">
         <th><h1>About Me - Part 1</h1></th>
     </table>
-    <p>นี่คือลำดับที่ 2 ของการแนะนำตัวฉัน</p>
-    
-    <p>ยินดีต้อนรับสู่หน้าที่ 1 ของการแนะนำตัวฉัน!</p>
-    <table style="background-color: blanchedalmond;">
-        <head>
-        </head>
-        <tbody>
-            <tr>
-                <td>ผมมีชื่อเล่นว่า ทีม</td>
-            </tr>
-<tr><td>ไม่มีอะไรจะเล่า</td></tr>
-        </tbody>
-    </table>
+
+    <p>
+        This is About Me oage, Here, can add your perspnal infomation, background, and interests.
+    <br>ยินดีต้อนรับสู่หน้าที่ 1 ของการแนะนำตัวผม
+    </p>
+    <p><b>=></b></p>
+    <p>
+        สวัสดีครับ ผมมีชื่อเล่นชื่อว่า ทีม
+        <br>เรียนอยู่ที่ : มทร.ล้าน 
+        <br>คณะ : วิศวกรรมศาสตร์ 
+        <br>สาขา : ซอฟต์แวร์
+        <br>กำลังคึกษาชั้นปีที่ 1
+    </p>
+    <p>ถ้าสนใจที่จะอ่านต่อ กรุณาไปหน้า <u>ถัดไป</u> ด้วยครับ</p>
     <!-- ลิงก์ไปยังหน้าถัดไปและหน้าหลัก -->
-    <a href="../part2/index.html"><span style="background-color:antiquewhite;">กลับสู่หน้าหลัก</span></a> | <a href="about2.html"><span style="background-color: aqua;">ถัดไป</span></a>
+    <a href="../part2/index.html"><span>กลับสู่หน้าหลัก</span></a> | <a href="about2.html"><span >ถัดไป</span></a>
 </body>
 </html>
