--- a/part3/about2.html
+++ b/part3/about2.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Part 2</title>
 </head>
-<body style="background-color: burlywood;">
-    <table style="background-color: blanchedalmond;">
-        <th><h1>bout Me - Part 2</h1></th>
-    </table>
-    <p>นี่คือลำดับที่ 2 ของการแนะนำตัวฉัน</p>
+<body style="background-color:blanchedalmond;">
+    <h1><span style="background-color:rosybrown">bout Me - Part 2</span></h1>
+    <p>นี่คือลำดับที่ 2 ของการแนะนำตัวผม</p>
+    <p><b><u>การศึกษาจบมาจาก</u></b></p>
+    <p>รร.สอง จ.แพร่</p>
+    <p><b><u>เรื่องชีวิตประจำวัน</u></b></p>
+    <p> ชอบหาอะไรทำไม่ให้ว่าง</p>
     
+    <p><b><u>เรื่องที่คาใจ</u></b></p>
+    <p>ไม่มี</p>
     <!-- ลิงก์ไปยังหน้าก่อนหน้าและหน้าถัดไป -->
-    <a href="about1.html">กลับไปก่อนหน้า</a> | <a href="about3.html">ถัดไป</a>
+    <a href="about1.html">กลับไปก่อนหน้านี้</a> | <a href="about3.html" >ถัดไป</a>
 </body>
 </html>
