--- a/part3/about3.html
+++ b/part3/about3.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Part 3</title>
 </head>
-<body>
-    <h1>About Me - Part 3</h1>
-    <p>นี่คือลำดับที่ 3 ของการแนะนำตัวฉัน</p>
+<body style="background-color: blanchedalmond;">
+    <h1><span style="background-color: rosybrown;">About Me - Part 3</span></h1>
+    <p>นี่คือลำดับที่ 3 ของการแนะนำตัวผม</p>
+    <p>ขอจบการแนะนำตัวของผมไว้เพียงเท่านี้ ขอบคุณครับ</p>
     
     <!-- ลิงก์กลับไปที่หน้าหลัก -->
-    <a href="../part2/index.html">กลับสู่หน้าหลัก</a>
+    <a href="../part3/about2.html">กลับไปก่อนหน้านี้</a> | <a href="../part2/index.html">กลับสู่หน้าหลัก</a>
 </body>
 </html>
