--- a/part2/hobby.html
+++ b/part2/hobby.html
@@ -8,6 +8,7 @@
 <body>
     <h1>My Hobby</h1>
     <p>This is the My Hoddy page. Discuss your hoddies, pastimes, and interests.</p>
+    <p>นี่คือลำดับที่ 3 ของการแนะนำตัวผม</p>
     <a href="../part2/index.html">Back to Home</a>
 </body>
 </html>
