--- a/part2/index.html
+++ b/part2/index.html
@@ -12,7 +12,7 @@
         }
         nav {
             width: 200px;
-            background-color: #f4f4f4;
+            background-color:rgb(245, 136, 136);
             padding: 20px;
             box-shadow: 2px 0 5px rgba(0,0,0,0.1);
             height: 100vh;
@@ -24,7 +24,7 @@
             margin: 10px 0;
         }
         nav a:hover {
-            color: #007BFF;
+            color: #ff0000;
         }
         main {
             flex: 1;
@@ -33,19 +33,19 @@
         header {
             text-align: center;
             padding: 10px 0;
-            background-color: #007BFF;
-            color: white;
+            background-color:rgb(247, 66, 66);
+            color:black;
         }
         footer {
             text-align: center;
             padding: 10px 0;
-            background-color: #f4f4f4;
+            background-color:rgba(245, 131, 131);
             position: fixed;
             bottom: 0;
             width: 100%;
         }
         footer a {
-            color: #007BFF;
+            color:blue;
             text-decoration: none;
             margin: 0 10px;
         }
@@ -54,7 +54,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color:rgb(237, 166, 166)">
     
     <nav>
 
