--- a/part3/about1.html
+++ b/part3/about1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Part 1</title>
 </head>
-<body style="background-color:blanchedalmond;">
-    <table style="background-color:rosybrown;">
+<body style="background-color:rgba(183, 228, 248, 0.644);">
+    <table style="background-color:rgb(94, 217, 233)">
         <th><h1>About Me - Part 1</h1></th>
     </table>
 
