--- a/part3/about2.html
+++ b/part3/about2.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Part 2</title>
 </head>
-<body style="background-color:blanchedalmond;">
-    <h1><span style="background-color:rosybrown">bout Me - Part 2</span></h1>
+<body style="background-color:rgba(183, 228, 248, 0.644);">
+    <h1><span style="background-color:rgb(94, 217, 233)">bout Me - Part 2</span></h1>
     <p>นี่คือลำดับที่ 2 ของการแนะนำตัวผม</p>
     <p><b><u>การศึกษาจบมาจาก</u></b></p>
     <p>รร.สอง จ.แพร่</p>
