--- a/part3/about3.html
+++ b/part3/about3.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Part 3</title>
 </head>
-<body style="background-color: blanchedalmond;">
-    <h1><span style="background-color: rosybrown;">About Me - Part 3</span></h1>
+<body style="background-color:rgba(183, 228, 248, 0.644);">
+    <h1><span style="background-color:rgb(94, 217, 233)">About Me - Part 3</span></h1>
     <p>นี่คือลำดับที่ 3 ของการแนะนำตัวผม</p>
     <p>ขอจบการแนะนำตัวของผมไว้เพียงเท่านี้ ขอบคุณครับ</p>
     
