--- a/part2/mycat.html
+++ b/part2/mycat.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Pochi the Cat</h1>
+<body style="background-color:rgba(183, 228, 248, 0.644);">
+    <h1><span style="background-color:rgb(94, 217, 233)">Pochi the Cat</span></h1>
     <img src="../part1/รูปภาพ/9e4ab180-fd11-11ed-b2aa-9935735a579c.png" alt="แมว" width="600px" height="400x" style="float: right;">
     <h2>Introduciton</h2>    
     <p>Pochi was adopted from an animal shelter and now reides in Seattle, WA, where she runs a small but successful wed page business exclusively for clients.</p>
