--- a/part2/hobby.html
+++ b/part2/hobby.html
@@ -9,7 +9,7 @@
     <h1><span style="background-color:rgb(94, 217, 233)">My Hobby</span></h1>
     <p>This is the My Hoddy page. Discuss your hoddies, pastimes, and interests.</p>
     <p>งานอดิเรกของผม: ส่วนมากก็ชอบหาอะไรทำไรเรื่อยเพื้่อไม่ให้ตัวเองมีเวลาว่าง วันไหนเนื่อยๆก็หยุดพักสัก 1 วัน แต่ถ้าหยุดสัก 5 วัน ก็คือเละเพราะเสียเวลาไปมากๆ และ ไม่กล้าลงมือทำมั่วแต่คิดว่ามันยากทั้งๆไม่มีอะไรยากเลยสักนิด
-        <br><u>สรุป งานอดิเรกของผม</u> ก็คือ การหาอะไรทำสักเพื่อไม่ให้ตัวเองว่าง เช่น การนอน
+        <br><u>สรุป งานอดิเรกของผม</u> ก็คือ การหาอะไรทำสักเพื่อไม่ให้ตัวเองว่าง เช่น การนอนหลับ
     </p>
     <a href="../part2/index.html">Back to Home</a>
 </body>
